Fixed sticky header related page jump

--- a/sass/site/primary/_masthead.scss
+++ b/sass/site/primary/_masthead.scss
@@ -10,13 +10,13 @@
 
 	@at-root {
 		.sticky-menu:not(.no-topbar) & {
-			position: absolute;
+			position: relative;
 			top: auto;
 		}
 
 		.sticky-menu.no-topbar &,
 		.sticky-menu.topbar-out & {
-			position: fixed;
+			position: relative;
 			top: 0;
 			left: 0;
 			width: 100%;
