--- a/style.css
+++ b/style.css
@@ -1236,11 +1236,11 @@ a {
   z-index: 999;
   min-width: 1060px; }
   .sticky-menu:not(.no-topbar) #masthead {
-    position: absolute;
+    position: relative;
     top: auto; }
   .sticky-menu.no-topbar #masthead,
   .sticky-menu.topbar-out #masthead {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
